--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,11 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Node modules
+node_modules/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Local interview data
+data/
+*.json
+!metadata.json
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Browser/OS files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
